--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,6 +1,6 @@
 <div class='card'
      *ngIf='product'>
-  <div class='card-header'>
+  <div class='card-header nice-class'>
     {{pageTitle + ': ' + product.productName}}
   </div>
 
